--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* // dark mode */
+@keyframes fade-in {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .animate-fade-in {
+    animation: fade-in 1s ease-in-out;
+  }
+  /* CSS لإضافة تأثير الدوران */
+.rotate {
+    transition: transform 0.5s ease;
+}
+
+.rotate:hover {
+    transform: rotate(360deg); /* تدوير الشعار 360 درجة */
+}
+
+  
